atualização na cor da nav e footer, inserção de imagem

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navnar-light">
     <a class="navbar-brand" href="https://paulo1991.github.io/paulo.github.io/">
-        <img src="bootstrap/img/linux.png" width="100" height="80" >
+        <img src="bootstrap/img/art3.png" width="100" height="80" >
         </a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
