atualização nas imagens background

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </nav>
     <section id="quemsomos">
         <div class="container-fluid quem-somos text-center margin">
-            <p>Quem somos</p><br>
-            <p id="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Veritatis recusandae excepturi eius commodi expedita magni vero soluta,
-            porro vel esse illum quibusdam quas alias quod atque nihil tempore voluptate sint.</p>
+            <p>Oque é artes Artes-Visuais</p><br>
+            <h3>
+                As Artes Visuais são as formas de arte como a cerâmica, desenho, pintura, escultura, gravura, design, artesanatos, fotografia, vídeo, produção cinematográfica e arquitetura. Muitas disciplinas artísticas (artes cênicas, arte conceitual, artes têxteis) envolvem aspectos das artes visuais, bem como artes de outros tipos. Também incluído no campo das artes visuais são as artes aplicadas tais como desenho industrial, desenho gráfico, design de moda, design de interiores e arte decorativa.
+                </h3>
         </div>
     </section>
     <section id="parceiros">
